project reference != package reference #54

--- a/src/Steeltoe.Cli/Steeltoe.Cli.csproj
+++ b/src/Steeltoe.Cli/Steeltoe.Cli.csproj
@@ -21,6 +21,6 @@
     <ProjectReference Include="..\Steeltoe.Tooling\Steeltoe.Tooling.csproj" />
   </ItemGroup>
   <ItemGroup Condition="'$(CI_BUILD)' == 'True'">
-    <ProjectReference Include="Steeltoe.Tooling" Version="$(SteeltoeVersion)$(SteeltoeVersionSuffix)" />
+    <PackageReference Include="Steeltoe.Tooling" Version="$(SteeltoeVersion)$(SteeltoeVersionSuffix)" />
   </ItemGroup>
 </Project>
