--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,11 +16,17 @@ test_script:
   - ps: dotnet test test\Steeltoe.Cli.Test
 build_script:
   - ps: steeltoe-ci\scripts\appveyor_build.ps1
+  - ps: steeltoe-ci\scripts\sign-packages.ps1
 artifacts:
   - path: '**\*.nupkg'
 environment:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
+  ProjectList: Steeltoe.Tooling Steeltoe.Cli
+  SignClientUser:
+    secure: Tt9mySuspn9dHJOLKMoGxrNJvJbpBrWK44UI9Qc9+eNilYdoukHZ3jUF06pl2r60
+  SignClientSecret:
+    secure: ZmCTr+SyfQtewSNsiB8OMISmQJp8RfjRSK0Dvg60iTQ=
 deploy:
 - provider: NuGet
   skip_symbols: false
