Adds support for PostgreSQL [#44]

--- a/src/Steeltoe.Tooling/steeltoe.rc/registry.yml
+++ b/src/Steeltoe.Tooling/steeltoe.rc/registry.yml
@@ -28,6 +28,9 @@ serviceTypes:
   mysql:
     description: MySQL Server
     port: 3306
+  postgresql:
+    description: PostgreSQL Server
+    port: 5432
   redis:
     description: Redis In-Memory Datastore
     port: 6379
@@ -54,6 +57,9 @@ targets:
       mysql:
         service: p-mysql
         plan: 100mb
+      postgresql:
+        service: postgresql-10-odb
+        plan: standalone
       redis:
         service: p-redis
         plan: shared-vm
@@ -76,6 +82,8 @@ targets:
         image-windows: steeltoeoss/mssql-amd64-windows:2017-CU1
       mysql:
         image: steeltoeoss/mysql:5.7.24
+      postgresql:
+        image: steeltoeoss/postgresql:10.8
       redis:
         image-linux: steeltoeoss/redis-amd64-linux:4.0.11
         image-windows: steeltoeoss/redis-amd64-windows:3.0.504
