--- a/src/Steeltoe.Tooling/Steeltoe.Tooling.csproj
+++ b/src/Steeltoe.Tooling/Steeltoe.Tooling.csproj
@@ -23,4 +23,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Drivers" />
+  </ItemGroup>
 </Project>
