Updates MySQL service/plan per PCFOne changes.
[Closes #76]

--- a/src/Steeltoe.Tooling/steeltoe.rc/registry.yml
+++ b/src/Steeltoe.Tooling/steeltoe.rc/registry.yml
@@ -58,8 +58,8 @@ targets:
         service: p-circuit-breaker-dashboard
         plan: standard
       mysql:
-        service: p-mysql
-        plan: 100mb
+        service: p.mysql
+        plan: db-small
       postgresql:
         service: postgresql-10-odb
         plan: standalone
