--- a/src/Steeltoe.Cli/Steeltoe.Cli.csproj
+++ b/src/Steeltoe.Cli/Steeltoe.Cli.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\config\versions.props" />
   <PropertyGroup>
     <Title>Steeltoe CLI</Title>
@@ -10,7 +10,7 @@
     <PackageIconUrl>https://steeltoe.io/images/transparent.png</PackageIconUrl>
     <PackageProjectUrl>https://steeltoe.io</PackageProjectUrl>
     <PackageTags>Docker, CloudFoundry</PackageTags>
-    <PackageLicenseUrl>https://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
+    <PackageLicense>https://www.apache.org/licenses/LICENSE-2.0</PackageLicense>
     <VersionPrefix>$(SteeltoeVersion)</VersionPrefix>
     <VersionSuffix>$(SteeltoeVersionSuffix)</VersionSuffix>
   </PropertyGroup>
