--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,10 +3,15 @@ trigger:
 - dev
 
 variables:
-  Solution: 'Tooling'
-  PackageVersion: $[format('0.5.0-{0}', variables['Build.BuildId'])]
-  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-  DOTNET_CLI_TELEMETRY_OPTOUT: 1
+- group: '.NET Foundation'
+- name: Solution
+  value: 'Tooling'
+- name: PackageVersion
+  value: $[format('0.5.0-{0}', variables['Build.BuildId'])]
+- name: DOTNET_SKIP_FIRST_TIME_EXPERIENCE
+  value: true
+- name: DOTNET_CLI_TELEMETRY_OPTOUT
+  value: 1
 
 jobs:
 - job: 'Linux'
