--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,9 +51,9 @@ jobs:
     vmImage: 'Windows-2019'
   steps:
   - pwsh: |
-      if ($env:PackageVersionOverride) {
-        Write-Host "overriding build version $env:PackageVersion -> $env:PackageVersionOverride"
-        $env:PackageVersion = $env:PackageVersionOverride
+      if ($env:BUILD_SOURCEBRANCH -match "^refs\/tags\/(.+)")
+      {
+            $env:PackageVersion = $Matches.1
       }
       Write-Host "build version set to $env:PackageVersion"
       $prefix = $env:PackageVersion.Split('-')[0]
@@ -64,7 +64,6 @@ jobs:
       Write-Host "##vso[task.setvariable variable=VersionSuffix;]$suffix"
     env:
       PackageVersion: $(PackageVersion)
-      PackageVersionOverride: $(PackageVersionOverride)
     displayName: 'Version'
   - task: 'DotNetCoreCLI@2'
     displayName: 'Build'
