use the StringTemplate template engine
Replaces the generation of config files using serialization techniques
with the use of a template engine.
Initially the idea was to use Steeltoe.Initializr however StringTemplate
turned out to be a better fit.
[closes #96]

--- a/config/versions.props
+++ b/config/versions.props
@@ -4,6 +4,7 @@
     <McMasterExtensionsCommandLineUtilsVersion>2.2.5</McMasterExtensionsCommandLineUtilsVersion>
     <MicrosoftExtensionsVersion>2.1.1</MicrosoftExtensionsVersion>
     <ShouldlyVersion>3.0.0</ShouldlyVersion>
+    <StringTemplate4Version>4.0.8</StringTemplate4Version>
     <TestSdkVersion>15.7.2</TestSdkVersion>
     <XunitStudioVersion>2.3.1</XunitStudioVersion>
     <XunitVersion>2.3.1</XunitVersion>
