--- a/src/Steeltoe.Tooling/steeltoe.rc/templates/Dockerfile.st
+++ b/src/Steeltoe.Tooling/steeltoe.rc/templates/Dockerfile.st
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1
+FROM <images.DotnetSdk>
 WORKDIR /<project.Name>
 RUN mkdir -p /usr/local/share/dotnet/sdk/NuGetFallbackFolder
 CMD ["dotnet", "watch", "run", "--urls", "<project.Services:{svc|<svc.Protocol>://0.0.0.0:<svc.Port>}; separator=";">"]
