--- a/src/Steeltoe.Tooling/steeltoe.rc/registry/dependencies.yml
+++ b/src/Steeltoe.Tooling/steeltoe.rc/registry/dependencies.yml
@@ -24,4 +24,5 @@
   image: steeltoeoss/redis-amd64-linux:4.0.11
   port: 5672
   nugets:
+    - Microsoft.Extensions.Caching.Redis
     - Microsoft.Extensions.Caching.StackExchangeRedis
