--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,7 @@ variables:
   Solution: 'Tooling'
   ProductVersion: '0.7.0'
   PackageVersion: $[format('0.7.0-{0}', variables['Build.BuildId'])]
+  DotNetVersion: 3.1.x
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
@@ -14,6 +15,11 @@ jobs:
   pool:
     vmImage: 'Ubuntu-16.04'
   steps:
+  - task: UseDotNet@2
+    displayName: 'Setup DotNet $(DotNetVersion)'
+      inputs:
+        packageType: sdk
+        version: $(DotNetVersion)
   - task: 'DotNetCoreCLI@2'
     displayName: 'Build'
     inputs:
@@ -29,6 +35,11 @@ jobs:
   pool:
     vmImage: 'macOS-10.14'
   steps:
+  - task: UseDotNet@2
+    displayName: 'Setup DotNet $(DotNetVersion)'
+      inputs:
+        packageType: sdk
+        version: $(DotNetVersion)
   - task: 'DotNetCoreCLI@2'
     displayName: 'Build'
     inputs:
@@ -59,6 +70,11 @@ jobs:
     env:
       PackageVersion: $(PackageVersion)
     displayName: 'Version'
+  - task: UseDotNet@2
+    displayName: 'Setup DotNet $(DotNetVersion)'
+      inputs:
+        packageType: sdk
+        version: $(DotNetVersion)
   - task: 'DotNetCoreCLI@2'
     displayName: 'Build'
     inputs:
