--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,15 +4,27 @@ trigger:
 - dev
 - sandbox
 
+# variables:
+#   Solution: 'Tooling'
+#   Group: '.NET Foundation'
+#   ProductVersion: '0.8.0'
+#   PackageVersion: $[format('0.8.0-{0}', variables['Build.BuildId'])]
+#   DotNet2Version: 2.1.x
+#   DotNet3Version: 3.1.x
+#   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+#   DOTNET_CLI_TELEMETRY_OPTOUT: 1
 variables:
-  Solution: 'Tooling'
-  Group: '.NET Foundation'
-  ProductVersion: '0.8.0'
-  PackageVersion: $[format('0.8.0-{0}', variables['Build.BuildId'])]
-  DotNet2Version: 2.1.x
-  DotNet3Version: 3.1.x
-  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-  DOTNET_CLI_TELEMETRY_OPTOUT: 1
+  - group: '.NET Foundation'
+  - name: Solution
+    value: 'Tooling'
+  - name: ProductVersion
+    value: '0.5.0'
+  - name: PackageVersion
+    value: $[format('0.5.0-{0}', variables['Build.BuildId'])]
+  - name: DOTNET_SKIP_FIRST_TIME_EXPERIENCE
+    value: true
+  - name: DOTNET_CLI_TELEMETRY_OPTOUT
+    value: 1
 
 jobs:
 - job: 'Windows'
