--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ trigger:
 #   DOTNET_CLI_TELEMETRY_OPTOUT: 1
 variables:
   # - group: '.NET%20Foundation'
-  - group: '.NET Foundation'
+  - group: 'PackageSigningSecrets'
   - name: Solution
     value: 'Tooling'
   - name: ProductVersion
